<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/bottom_navigation_menu_frag1"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_dashboard"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_airplanemode_active_24"
        android:title="@string/bottom_navigation_menu_frag2"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_notifications"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_local_taxi_24"
        android:title="@string/bottom_navigation_menu_frag3"
        app:showAsAction="ifRoom"/>

</menu>
